# land-registry

./: .README.md.kate-swp  .coveragerc  .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.template  Makefile  README.md  README_DEPLOYMENT.md  README_TESTING.md  TESTING_GUIDE.md  cloudbuild.yaml.BAK  deploy-cloudrun.sh  deploy-config.yaml  deploy-config.yaml.example  deploy.sh  file_availability.db  main-cloudrun.py  main.py  pyproject.toml  requirements.txt  run_dev.py  setup.cfg  vercel.json
app/: land_registry_app.py
app/static/: styles.css
app/templates/: map.html
backups/: opendata-service_20250921_172531_211688.yaml
data/: _cadastral_structure.json.backup  _municipality_flags.json  _wikidata_flags.json  cadastral_selection_2025-08-26T10-47-46-990Z.json  cadastral_structure.json  drawn_polygons_2025-08-26.json  polygon_selection_2025-08-26T10-28-00-298Z.json
docs/: QUALITY_AUDIT.md  REFACTORING_PLAN.md  ZONE_WORKFLOW_ARCHITECTURE_AND_PLAN.md
docs/archive/: CONTROL_LAYOUT_IMPROVEMENTS.md  FINAL_TEST_REPORT.md  INITIAL_WIDTH_FIX.md  MAINTENANCE_CHECKLIST.md  MAP_CONTROLS_FIX_SUMMARY.md  TEST_FIXES_SUMMARY.md  UNIQUE_CONTROLS_POSITIONING.md
docs/github_issues/zone_architecture/: 01-unify-app-shell-and-sidebar-ia.md  02-zone-microzone-domain-model-and-migrations.md  03-zone-crud-api.md  04-microzone-crud-api.md  05-zone-panel-ui-crud.md  06-microzone-ui-area-warning.md  07-bulk-selection-and-search-ui.md  08-spatial-lookup-apis-point-and-zone.md  09-map-rendering-and-keyboard-navigation.md  10-zone-driven-sales-rents-navigation.md
land_registry/: app.py  cadastral_db.py  cadastral_utils.py  catasto.py  catasto_improved.py  catasto_nested.py  config.py  dashboard.py  database.py  file_availability_db.py  flags.py  gcs_storage.py  generate_cadastral_form.py  main.py  map.py  map_controls.py  models.py  s3_storage.py  settings.py  shared_state.py  spatialite.py  sqlite_db.py  storage.py  zone_rules.py
land_registry/core/: __init__.py  clerk.py
land_registry/routers/: __init__.py  api.py  auth.py  auth_pages.py
land_registry/static/: SS_auth.js  cadastral_data.css  cadastral_data.js  folium-interface.js  map.js  styles.css  table-manager.js
land_registry/static/js/: clerk-auth.js
land_registry/templates/: base.html  cadastral_data.html  index.html  landing.html  map.html  map.html.backup  tabulator.html
notebooks/: omi.ipynb  test.ipynb
scripts/: convert_cadastral_formats.py  create_github_issues.sh  generate_requirements.py  import_cadastral_to_db.py  merge_fgb_per_region.py  merge_flags_to_cadastral.py  omi_import.py  recursive_unzip.py  remove_duplicate_files.py  remove_duplicate_gpkg.py  repair_corrupted_files.py  run_app.bash  run_tests.py  start.sh  test_for_coverage.py  transform_municipality_flags.py  validate_tests.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_app_comprehensive.py  test_config.py  test_corrected_api_endpoints.py  test_corrected_mocking.py  test_corrected_s3_storage.py  test_database.py  test_final_coverage_push.py  test_gcs_storage.py  test_generate_cadastral_form.py  test_map.py  test_map_controls.py  test_production_ready_suite.py  test_sqlite_db.py  test_zone_rules.py
tests/archive/: test_app_comprehensive.py  test_app_focused.py  test_corrected_mocking.py  test_coverage_boost.py  test_final_coverage_push.py  test_map_additional.py  test_map_controls.py  test_map_focused.py  test_production_ready_suite.py  test_s3_comprehensive.py  test_s3_storage.py  test_s3_unsigned.py
